# Tizen.Appium

./: .gitignore  .travis.yml  AppAdapter.cs  AppType.cs  Limitation.md  README.md  Tizen.Appium.csproj  Tizen.Appium.sln  TizenAppium.cs  TizenAppiumElement.cs  TizenAppiumServer.cs  uiautomator.manifest
Adapter/: BaseAdapter.cs  IObjectList.cs
Adapter/ElmSharp/: ElmSharpAdapter.cs  ElmSharpServer.cs  EvasObjectList.cs
Adapter/XamarinForms/: FormsAdapter.cs  FormsAppiumServer.cs  (+3 more)
AppAdapter/: AppAdapter.cs  IAppAdapter.cs  IObject.cs  IObjectList.cs
Appium.UITests/: Appium.UITests.csproj  Appium.UITests.sln  AppiumDriver.cs  FormsTizenGalleryUtils.cs  Program.cs  RemoteTouchScreenUtils.cs  TestTemplate.cs  UITestDriver.cs  WebElementUtils.cs  packages.config
Commands/: CommandTypes.cs  FindCommand.cs  GetAttributeCommand.cs  GetLocation.cs  GetText.cs  SetAttributeCommand.cs
InputGenerator/: IInputGenerator.cs  InputGenerator.cs  IpcConnection.cs
Server/: CommandTypes.cs  Geometry.cs  ICommand.cs  Location.cs  Request.cs  Result.cs  Server.cs  StateObject.cs
Tizen.Appium/: AppSocket.cs  AssemblyInfo.cs  Edbus.cs  ElementUtils.cs  EventObject.cs  EventType.cs  Interop.Edbus.cs  ItemObjectExtensions.cs  Log.cs  README.md  RequestInfo.cs  TestCommands.cs  TestHelper.cs  TestResult.cs  TestRunner.cs  Tizen.Appium.csproj  Tizen.Appium.sln  TizenAppium.cs  TizenAppiumDbus.cs  TizenAppiumDbusNames.cs  TizenAppiumServer.cs
Tizen.Appium.Forms/: CellWrapper.cs  FormsAdapter.cs  FormsElementExtensions.cs  FormsElementList.cs  ShellItemWrapper.cs  Tizen.Appium.Forms.csproj  TizenAppium.cs  VisualElementWrapper.cs
Tizen.Appium.Shared/: Tizen.Appium.Shared.shproj  Tizen.Appium.projitems  TizenAppium.cs
UIAutomator/: CMakeLists.txt
UIAutomator/service/: CMakeLists.txt
UIAutomator/service/dbus/: CMakeLists.txt  org.tizen.system.restful.service
UIAutomator/service/systemd/: CMakeLists.txt  uiautomator.service
UIAutomator/src/: core.cpp
UIAutomator/src/common/: common.h  core.cpp  dbus_utils.cpp  dbus_utils.h  log.h  type.h
UIAutomator/src/input_generator/: hardware_key.cpp  hardware_key.h  input_generator.h  keyboard.cpp  keyboard.h  touch.cpp  touch.h
UIAutomator/src/inputgenerator/: hardware_key.cpp  hardware_key.h  input_generator.cpp  input_generator.h  keyboard.cpp  keyboard.h  touch.cpp  touch.h
UIAutomator/src/server/: input_generator.cpp  input_generator.h  json_utils.cpp  json_utils.h  request.cpp  request.h  server.cpp  server.h
UIAutomator/src/utils/: dbus_utils.cpp  dbus_utils.h  json_utils.cpp  type.h
Utils/: ElementUtils.cs  Utils.cs
Xamarin.Forms.Apps/: Xamarin.Forms.Apps.sln
Xamarin.Issues.UITests/: AppiumDriver.cs  Program.cs  RemoteTouchScreenUtils.cs  TestScriptUtils.cs  WebElementUtils.cs  Xamarin.Issues.UITests.csproj  Xamarin.Issues.UITests.sln  packages.config
packaging/: uiautomator.rule  uiautomator.spec
(+320 files in other folders)
